# BattlePaddle

./: .gitignore  BPHelper.cpp  BPHelper.hpp  C2.py  CMakeLists.txt  Config.cpp  Config.hpp  PacketCraft.cpp  PacketCraft.hpp  PacketParse.cpp  PacketParse.hpp  README.md  RawSocket.cpp  RawSocket.hpp  RawSocketHelper.cpp  RawSocketHelper.hpp  botSocket.cpp  botSocket.hpp  executeCommand.cpp  executeCommand.hpp  install.sh  main.cpp  requirements.txt  service.service  sockThread.cpp  sockThread.hpp  test.cpp  testing.cpp  testing.hpp  time.hpp
C2/: C2.py  README.md  requirements.txt
include/: BPHelper.hpp  Config.hpp  PacketCraft.hpp  PacketParse.hpp  RawSocket.hpp  RawSocketHelper.hpp  executeCommand.hpp  time.hpp
source/: CMakeLists.txt  main.cpp  shared_main.cpp
source/bpLib/: CMakeLists.txt
source/bpLib/bpHelper/: BPHelper.cpp
source/bpLib/commandExec/: executeCommand.cpp  time.cpp
source/bpLib/config/: Config.cpp
source/bpLib/packet/: PacketCraft.cpp  PacketParse.cpp  README.md
source/bpLib/rawsocket/: README.md  RawSocket.cpp  RawSocketHelper.cpp
